<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>log_recorder</name>
  <version>0.0.0</version>
  <description>A wrapper around ros2 bag record API.</description>
  <maintainer email="curtisburke.eng@gmail.com">curtis</maintainer>
  <license>MIT-License</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>signal</depend>
  <depend>datetime</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
